<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/gradient_banner"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.MainActivity">


          <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ivClose"
            android:scaleType="centerCrop"
              android:elevation="@dimen/margin_medium"
            android:src="@drawable/ic_baseline_close_24"
            android:layout_marginTop="@dimen/margin_medium_2"
            android:layout_marginStart="@dimen/margin_medium_2"
            android:layout_width="@dimen/margin_large_n"
            android:layout_height="@dimen/margin_large_n"/>

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ivCover"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/trvel" />

        <View
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/gradient_banner" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvWelcome"
            android:elevation="@dimen/margin_medium"
          android:layout_marginTop="300dp"
            android:layout_marginStart="@dimen/margin_medium_3"
           android:layout_marginEnd="@dimen/margin_medium_3"
            android:fontFamily="@font/chivo_bold"
            android:textColor="@color/black"
            android:textSize="@dimen/text_heading_2x"
            android:text="@string/welcome_to_ready_to_travel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/tvDes"
            android:layout_marginStart="@dimen/margin_medium_3"
            android:layout_marginEnd="@dimen/margin_medium_3"
            android:layout_marginTop="@dimen/margin_medium_3"
            android:fontFamily="@font/chiv_regular"
            android:text="@string/lbl_welcome_des"
            android:elevation="@dimen/margin_medium"
            android:textColor="@color/black"
            android:layout_below="@id/tvWelcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <RelativeLayout
            android:id="@+id/btnLoginFB"
            android:layout_below="@id/tvDes"
            android:layout_marginEnd="@dimen/margin_medium_3"
            android:layout_width="@dimen/width_creat_new_account"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_xxlarge"
            android:layout_marginStart="@dimen/margin_medium_3"
            android:layout_marginBottom="@dimen/margin_medium"
            android:background="@drawable/bg_email_address"
            android:paddingTop="@dimen/margin_medium_2"
            android:paddingBottom="@dimen/margin_medium_2">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:fontFamily="@font/chiv_regular"
                android:text="@string/log_in_with_facebook"
                android:textColor="@color/white"
                android:textSize="@dimen/text_regular" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/ivFb"
                android:layout_width="@dimen/dimen_25"
                android:layout_height="@dimen/dimen_25"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="@dimen/margin_medium_2"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/facebook" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/btnEmailAddress"
            android:layout_width="@dimen/width_creat_new_account"
            android:layout_height="wrap_content"
            android:layout_below="@id/btnLoginFB"
            android:layout_marginEnd="@dimen/margin_medium_3"
            android:layout_marginStart="@dimen/margin_medium_3"
            android:layout_marginTop="@dimen/margin_medium_3"
            android:background="@drawable/bg_email_address"
            android:paddingTop="@dimen/margin_medium_2"
            android:paddingBottom="@dimen/margin_medium_2">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:fontFamily="@font/chiv_regular"
                android:text="@string/login_with_email_address"
                android:textColor="@color/white"
                android:textSize="@dimen/text_regular" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/btnCreateNewAcctount"
            android:layout_marginEnd="@dimen/margin_medium_3"
            android:layout_width="@dimen/width_creat_new_account"
            android:layout_height="wrap_content"
            android:layout_below="@id/btnEmailAddress"
            android:layout_marginStart="@dimen/margin_medium_3"
            android:layout_marginTop="@dimen/margin_medium_3"
            android:layout_marginBottom="50dp"
            android:background="@drawable/bg_create_newf_acc"
            android:paddingTop="@dimen/margin_medium_2"
            android:paddingBottom="@dimen/margin_medium_2">


            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:fontFamily="@font/chiv_regular"
                android:text="@string/lbl_create_a_new_account"
                android:textColor="@color/white"
                android:textSize="@dimen/text_regular" />
        </RelativeLayout>
    </RelativeLayout>
