<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".activities.CreateNewAccountActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/llAlmostThere"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryDark"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/ivPrevious"
                android:layout_width="@dimen/margin_large_n"
                android:layout_height="@dimen/margin_large_n"
                android:layout_marginStart="@dimen/margin_medium_2"
                android:layout_marginTop="@dimen/margin_medium_2"
                android:layout_marginEnd="@dimen/margin_medium_2"
                android:elevation="@dimen/margin_medium"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_baseline_arrow_back_ios_24" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvAlmostThere"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_medium_2"
                android:layout_marginTop="@dimen/margin_medium_3"
                android:layout_marginEnd="@dimen/margin_medium_2"
                android:fontFamily="@font/chivo_bold"
                android:text="@string/almost_there"
                android:textColor="@color/black"
                android:textSize="@dimen/text_regular_3x" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvInstruction"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_medium_2"
                android:layout_marginTop="@dimen/margin_medium_3"
                android:layout_marginEnd="150dp"
                android:fontFamily="@font/chiv_regular"
                android:letterSpacing="-0.03"
                android:text="@string/lbl_instruction"
                android:textColor="@color/black"
                android:textSize="@dimen/text_regular_2x" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvMandatory"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_medium_2"
                android:layout_marginTop="@dimen/margin_medium_2"
                android:layout_marginEnd="@dimen/margin_medium_2"
                android:layout_marginBottom="@dimen/margin_large_n"
                android:fontFamily="@font/chiv_regular"
                android:text="*Mandatory"
                android:textColor="@color/colorGrey"
                android:textSize="@dimen/text_regular" />
        </LinearLayout>


        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ivGuitar"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_below="@id/llAlmostThere"
            android:layout_alignParentEnd="true"
            android:layout_gravity="bottom|end"
            android:layout_marginStart="@dimen/margin_medium_2"
            android:layout_marginTop="-100dp"
            android:layout_marginEnd="@dimen/margin_medium_2"
            android:layout_marginBottom="-40dp"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/guitar" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutFirstName"
            style="@style/Widget.Design.TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/ivGuitar"
            android:layout_marginStart="@dimen/margin_medium_2"
            android:layout_marginTop="@dimen/margin_medium_2"
            android:layout_marginEnd="@dimen/margin_medium_2"
            android:drawableTint="@color/colorSecondaryText"
            android:textColorHint="@color/colorGrey">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtFirstName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:drawableTint="@color/colorSecondaryText"
                android:fontFamily="@font/chivo_bold"
                android:hint="@string/lbl_first_name"
                android:padding="@dimen/margin_medium"
                android:textColor="@color/colorSecondaryText"
                android:textColorHint="@color/colorGrey"
                android:textSize="@dimen/text_regular_2x" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutSecondName"
            style="@style/Widget.Design.TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/textInputLayoutFirstName"
            android:layout_marginStart="@dimen/margin_medium_2"
            android:layout_marginTop="@dimen/margin_medium_2"
            android:layout_marginEnd="@dimen/margin_medium_2"
            android:drawableTint="@color/colorSecondaryText"
            android:textColorHint="@color/colorGrey">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtSecondName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:drawableTint="@color/colorSecondaryText"
                android:fontFamily="@font/chivo_bold"
                android:hint="@string/second_name"
                android:padding="@dimen/margin_medium"
                android:textColor="@color/colorSecondaryText"
                android:textColorHint="@color/colorGrey"
                android:textSize="@dimen/text_regular_2x" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutEmailAddress"
            style="@style/Widget.Design.TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/textInputLayoutSecondName"
            android:layout_marginStart="@dimen/margin_medium_2"
            android:layout_marginTop="@dimen/margin_medium_2"
            android:layout_marginEnd="@dimen/margin_medium_2"
            android:drawableTint="@color/colorSecondaryText"
            android:textColorHint="@color/colorGrey">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtEmailAddress"
                android:inputType="textEmailAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableTint="@color/colorSecondaryText"
                android:fontFamily="@font/chivo_bold"
                android:hint="@string/email_address"
                android:padding="@dimen/margin_medium"
                android:textColor="@color/colorSecondaryText"
                android:textColorHint="@color/colorGrey"
                android:textSize="@dimen/text_regular_2x" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutDateOfBirth"
            style="@style/Widget.Design.TextInputLayout"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/textInputLayoutEmailAddress"
            android:layout_marginStart="@dimen/margin_medium_2"
            android:layout_marginTop="@dimen/margin_medium_2"
            android:drawableTint="@color/colorSecondaryText"
            android:textColorHint="@color/colorGrey">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtDateOfBirth"
                android:layout_width="150dp"
                android:clickable="false"
                android:focusable="false"
                android:layout_height="wrap_content"
                android:drawableTint="@color/colorSecondaryText"
                android:fontFamily="@font/chivo_bold"
                android:hint="@string/date_of_birth"
                android:text="DD/MM/YYYY"
                android:textColor="@color/colorSecondaryText"
                android:textColorHint="@color/colorGrey"
                android:textSize="@dimen/text_regular_2x" />

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ivDateOfBirth"
            android:layout_width="@dimen/dimen_50dp"
            android:layout_height="@dimen/dimen_25"
            android:layout_marginStart="-20dp"
            android:layout_toEndOf="@id/textInputLayoutDateOfBirth"
            android:layout_below="@id/textInputLayoutEmailAddress"
            android:layout_alignBottom="@id/textInputLayoutDateOfBirth"
            android:layout_marginTop="@dimen/dimen_25"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/dob" />

        <LinearLayout
            android:id="@+id/llGender"
            android:layout_width="150dp"
            android:layout_height="50dp"

            android:layout_below="@id/textInputLayoutEmailAddress"
            android:layout_alignBottom="@id/textInputLayoutDateOfBirth"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="@dimen/margin_medium_2"
            android:layout_marginEnd="@dimen/margin_medium_2"
            android:background="@drawable/bg_gender"
            android:orientation="horizontal"
            android:padding="2dp"
            android:weightSum="2">

            <TextView
                android:id="@+id/tvFemale"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/bg_select_gender"
                android:fontFamily="@font/chivo_bold"
                android:gravity="center|center_vertical"
                android:text="@string/female"
                android:textAlignment="center"
                android:textColor="@color/colorSecondaryText" />

            <TextView
                android:id="@+id/tvMale"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:fontFamily="@font/chivo_bold"
                android:gravity="center|center_vertical"
                android:padding="@dimen/margin_medium"
                android:text="@string/male"
                android:textAlignment="center"
                android:textColor="@color/colorSecondaryText" />
        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutNationality"
            style="@style/Widget.Design.TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/textInputLayoutDateOfBirth"
            android:layout_marginStart="@dimen/margin_medium_2"
            android:layout_marginTop="@dimen/margin_medium_2"
            android:layout_marginEnd="@dimen/margin_medium_2"
            android:drawableTint="@color/colorSecondaryText"
            android:textColorHint="@color/colorGrey">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtNationality"
                android:inputType="text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableTint="@color/colorSecondaryText"
                android:fontFamily="@font/chivo_bold"
                android:hint="@string/nationality"
                android:textColor="@color/colorSecondaryText"
                android:textColorHint="@color/colorGrey"
                android:textSize="@dimen/text_regular_2x" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutCountryOfResidence"
            style="@style/Widget.Design.TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/textInputLayoutNationality"
            android:layout_marginStart="@dimen/margin_medium_2"
            android:layout_marginTop="@dimen/margin_medium_2"
            android:layout_marginEnd="@dimen/margin_medium_2"
            android:drawableTint="@color/colorSecondaryText"
            android:textColorHint="@color/colorGrey">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtCountryOfResidence"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:drawableTint="@color/colorSecondaryText"
                android:fontFamily="@font/chivo_bold"
                android:hint="@string/country_of_residence"
                android:textColor="@color/colorSecondaryText"
                android:textColorHint="@color/colorGrey"
                android:textSize="@dimen/text_regular_2x" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/tvLblMobile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/textInputLayoutCountryOfResidence"
            android:layout_marginStart="@dimen/margin_medium_2"
            android:layout_marginTop="@dimen/margin_medium_2"
            android:text="Mobile no.(optional)"
            android:textColor="@color/colorGrey"
            android:textSize="@dimen/text_regular" />

        <FrameLayout
            android:id="@+id/flSpinnerCountryCode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvLblMobile"
            android:layout_marginStart="@dimen/margin_medium_2"
            android:layout_marginTop="@dimen/margin_medium_2"
            android:backgroundTint="@color/colorPrimaryDark">

            <androidx.appcompat.widget.AppCompatSpinner
                android:id="@+id/spinnerCountryCode"
                style="@style/Widget.AppCompat.Spinner.Underlined"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:backgroundTint="@color/colorSecondaryText"
                android:entries="@array/countryCodeList" />

            <TextView
                android:layout_width="@dimen/margin_large"
                android:layout_height="match_parent"
                android:background="@color/colorPrimary"
                android:layout_gravity="end|center_vertical"
                android:textColor="@color/colorSecondaryText"
                android:text="|" />
        </FrameLayout>


        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edtMobileNo"
            android:layout_marginStart="-10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/flSpinnerCountryCode"
            android:layout_toEndOf="@id/flSpinnerCountryCode"
            android:layout_below="@id/tvLblMobile"
            android:layout_marginTop="@dimen/margin_medium_2"
            android:layout_marginEnd="@dimen/margin_medium_2"
            android:drawableTint="@color/colorSecondaryText"
            android:backgroundTint="@color/colorSecondaryText"
            android:fontFamily="@font/chivo_bold"
            android:hint="098765"
            android:inputType="number"
            android:textColor="@color/colorSecondaryText"
            android:textColorHint="@color/colorGrey"
            android:textSize="@dimen/text_regular_2x" />

        <View
            android:id="@+id/viewDivider"
            android:layout_below="@id/flSpinnerCountryCode"
            android:layout_marginTop="@dimen/margin_medium_2"
            android:background="@color/colorPrimaryDark"
            android:layout_width="match_parent"
            android:layout_height="4dp"/>

        <RelativeLayout
            android:id="@+id/btnCreateNewAcctount"
            android:layout_marginEnd="@dimen/margin_medium_2"
            android:layout_width="@dimen/width_creat_new_account"
            android:layout_height="wrap_content"
            android:layout_below="@id/viewDivider"
            android:layout_marginStart="@dimen/margin_medium_2"
            android:layout_marginTop="@dimen/margin_medium_3"
            android:layout_marginBottom="30dp"
            android:background="@drawable/bg_create_newf_acc"
            android:paddingTop="@dimen/margin_medium_2"
            android:paddingBottom="@dimen/margin_medium_2">


            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:fontFamily="@font/chiv_regular"
                android:text="@string/lbl_create_a_new_account"
                android:textColor="@color/white"
                android:textSize="@dimen/text_regular" />
        </RelativeLayout>


    </RelativeLayout>

</androidx.core.widget.NestedScrollView>